bevy_asset_loader/tests/ui/folder_and_path.stderr
error: You can only specify one of 'folder' or 'path'
 --> tests/ui/folder_and_path.rs:8:5
  |
8 | /     #[asset(path = "test.ogg", folder = "test")]
9 | |     test: Handle<AudioSource>,
  | |_____________________________^
